--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -16,7 +16,7 @@ whitelist_rules:
   - empty_parentheses_with_trailing_closure
   # - explicit_type_interface
   - for_where
-  - force_cast
+  # - force_cast
   - force_try
   - generic_type_name
   - implicit_getter
@@ -30,7 +30,7 @@ whitelist_rules:
   - mark
   - multiple_closures_with_trailing_closure
   - nesting
-  - no_grouping_extension
+  # - no_grouping_extension
   - opening_brace
   - operator_usage_whitespace
   - operator_whitespace
