--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,7 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+KINCLE/Supporting Files/Keys.swift
 
 # Code Injection
 # After new code Injection tools there's a generated folder /iOSInjectionProject
